--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock, Paper & Scissors</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <div id="game-container">
+      <h1>Rock Paper Scissors</h1>
+
+      <div>
+        <button id="rock-btn"></button>
+        <button id="paper-btn"></button>
+        <button id="scissors-btn"></button>
+      </div>
+
+      <div id="result"></div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
