--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
   <body>
     <div id="game-container">
       <h1>Rock Paper Scissors</h1>
-
-      <div>
-        <button id="rock-btn"></button>
-        <button id="paper-btn"></button>
-        <button id="scissors-btn"></button>
+      <div id="button_cont">
+        <button id="rock"></button>
+        <button id="paper"></button>
+        <button id="scissors"></button>
       </div>
-
-      <div id="result"></div>
+      <div id="result">
+        <div id="current-result"></div>
+        <div id="player-score">Player Score: 0</div>
+        <div id="computer-score">Computer Score: 0</div>
+        <div id="final-result"></div>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
